# bgg-data-warehouse

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_PUBSUB.md  Dockerfile  Dockerfile.dashboard  LICENSE  Makefile  README.md  check_prod_status.py  cloudbuild-dashboard.yaml  cloudbuild.yaml  debug_rankings.py  docker-compose.yml  examine_game.py  load_sample_games.py  main.py  package.json  profile_output.prof  profile_refresh.py  pyproject.toml  tasks.md  test_load_games.py  workflow_settings.yaml
.streamlit/: config.toml
config/: bigquery.yaml  cloudbuild.warehouse-api.yaml  cloudbuild.yaml
dataform/: dataform.json
definitions/: best_player_counts.sqlx  bgg_complexity_predictions.sqlx  bgg_description_embeddings.sqlx  bgg_game_coordinates.sqlx  bgg_game_embeddings.sqlx  bgg_predictions.sqlx  deployed_models.sqlx  filter_categories.sqlx  filter_designers.sqlx  filter_mechanics.sqlx  filter_publishers.sqlx  filter_tables.sqlx  game_dropdown_options.sqlx  game_features_hash.sqlx  game_first_prediction.sqlx  game_neighbors.sqlx  game_profile.sqlx  game_similarity_search.sqlx  games_active.sqlx  games_features.sqlx  player_count_recommendations.sqlx  sources.js  sources.sqlx  user_collection_predictions.sqlx
docker/: Dockerfile.dashboard  Dockerfile.pipeline
docs/: DEPLOYMENT_PUBSUB.md  MIGRATION_TRACKING_TABLES.md  architecture.md  bgg_api.md  dashboard_deployment.md  dataform_operations.md  lineage.html  lineage.md  refresh_strategy.md
scripts/: Deploy-DashboardLocally.ps1  cf_curl_probe.py  generate_refresh_report.py  migrate_core.ps1  migrate_core.sh  migrate_datasets.py  migrate_raw.ps1  migrate_raw.sh
src/: __init__.py  config.py
terraform/: auth.tf  bigquery.tf  cloud_run.tf  dataform.tf  iam.tf  main.tf  outputs.tf  storage.tf  variables.tf  warehouse_api.tf
tests/: conftest.py  test_api_client.py  test_api_integration.py  test_bigquery_integration.py  test_bulk_processing.py  test_cloud_run_jobs.py  test_config.py  test_config_datasets.py  test_data_warehouse_integration.py  test_fetch_data.py  test_fetch_games.py  test_fetch_responses.py  test_fetch_responses_integration.py  test_game_fetcher.py  test_games_reader.py  test_games_router.py  test_id_fetcher.py  test_id_fetcher_browser.py  (+15 more)
(+159 files in other folders)
