[project]
name = "bgg-data-warehouse"
version = "0.3.11"
description = "BoardGameGeek Data Warehouse using BigQuery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.30.0",
    "requests>=2.31.0",
    "google-cloud-bigquery>=3.14.0",
    "google-cloud-storage>=2.14.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "xmltodict>=0.13.0",
    "streamlit>=1.29.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "db-dtypes>=1.2.0",
    "pandas-gbq>=0.29.1",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-auth>=2.40.3",
    "google-cloud-bigquery-datatransfer>=3.20.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipykernel>=6.29.5",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
